--- a/app/globals.css
+++ b/app/globals.css
@@ -45,6 +45,14 @@ body {
     animation: dash4 1.5s ease-in-out infinite;
 }
 
+.animate-toast {
+    animation: toast 4s linear forwards;
+}
+
+.animate-heightActive {
+    animation: heightActive 0.2s linear forwards;
+}
+
 @keyframes rotate4 {
     100% {
         transform: rotate(360deg);
@@ -64,5 +72,25 @@ body {
 
     100% {
         stroke-dashoffset: -125px;
+    }
+}
+
+@keyframes toast {
+    0% {
+        width: 100%;
+    }
+
+    100% {
+        width: 0%;
+    }
+}
+
+@keyframes heightActive {
+    0% {
+        height: 0;
+    }
+
+    100% {
+        height: 16px;
     }
 }
