--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,10 @@ body {
     }
 }
 
+.system-font {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+}
+
 .loadingSvg {
     width: 3.25em;
     transform-origin: center;
