--- a/app/globals.css
+++ b/app/globals.css
@@ -98,3 +98,13 @@ body {
         height: 16px;
     }
 }
+
+@theme inline {
+  --animate-scroll: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+ 
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
+    }
+  }
+}
